# kotatsu_backend

./: .env.selfhost.example  .gitignore  .sysctl.selfhost.example  Dockerfile.api  Dockerfile.ddns  Dockerfile.realtime  README.md  docker-compose.yml  justfile  package-lock.json  package.json  tsconfig.json  wrangler.toml
.github/workflows/: build-remote-rtt.yml  ci.yml  deploy-home.yml
docs/: backend-spec.md  cloudflare-ddns-setup.md  game-spec.md  interval32-webtransport-vs-websocket.md  latency-benchmark.md  matchmaking-api.md  netem-quic-vs-ws.md  pure-quic-interval32.md  quic-realtime-protocol-ja.md  realtime-protocol.md  remote-rtt-testers.txt  udp-realtime-protocol-ja.md
docs/infra/: README.md  generate_diagrams.py  requirements.txt
docs/slides/: index.html  slider.js  styles.css
realtime-rust/: Cargo.toml  README.md
realtime-rust/src/: main.rs
realtime-split/: .env.selfhost.example  Cargo.toml  Dockerfile.api  Dockerfile.realtime  README.md  docker-compose.yml  measure-remote-rtt.sh  run-local-4clients.sh  run-remote-4clients.sh  smoke-test.sh
realtime-split/api-server/: Cargo.toml
realtime-split/api-server/src/: main.rs  type.rs
realtime-split/proto/: Cargo.toml  build.rs
realtime-split/proto/proto/: controlplane.proto
realtime-split/proto/src/: lib.rs
realtime-split/realtime-server/: Cargo.toml
realtime-split/realtime-server/src/: cleanup.rs  connection.rs  grpc_service.rs  magicnums.rs  main.rs  params.rs  player.rs  protocol.rs  room.rs  server.rs  ticket.rs  types.rs  udp_connection.rs  utils.rs
realtime-split/test-client/: Cargo.toml
realtime-split/test-client/src/: main.rs
scripts/: cloudflare-ddns-update.sh  deploy-home.sh  home-ddns.sh  home-podman.sh  install-home-runtime.sh  run-cloudflare-ddns.sh
src/: domain.ts  types.ts  worker.ts
