[package]
name = "kotatsu-realtime-server-split"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
kotatsu-proto = { path = "../proto" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
